--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start:monitor": "wt serve ./monitor/goodreads-monitor.js --hostname localhost --port 1234 --secrets-file ./monitor/production-secrets --storage-file ./monitor/storage-file --meta-file ./monitor/meta-file"
+  },
   "dependencies": {
+    "axios": "0.15.2",
+    "lodash": "^4.17.4",
+    "xml2json": "^0.11.0"
   }
 }
