--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "start:monitor": "wt serve ./monitor/goodreads-monitor.js --hostname localhost --port 1234 --secrets-file ./monitor/production-secrets --storage-file ./monitor/storage-file --meta-file ./monitor/meta-file",
-    "start:notifiers": "wt serve ./notifiers/mailgun/mailgun.js --hostname localhost --port 1235 --secrets-file ./monitor/production-secrets"
+    "start:notifiers": "wt serve ./notifiers/mailgun/mailgun.js --hostname localhost --port 1235 --secrets-file ./notifiers/mailgun/production-secrets --meta-file ./notifiers/mailgun/meta-file --parse-body"
   },
   "dependencies": {
-    "axios": "0.15.2",
+    "axios": "^0.16.2",
     "lodash": "^4.17.4",
+    "mailgun-js": "^0.13.1",
     "xml2json": "^0.11.0"
   }
 }
