--- a/notifiers/mailgun/package.json
+++ b/notifiers/mailgun/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "mailgun-js": "^0.13.1"
+    "mailgun-js": "^0.13.1",
+    "lodash": "^4.17.4"
   }
 }
